@@ -36,6 +36,9 @@ Release date: TBA
 
   Closes #5012
 
+* Fix false-positive ``undefined-variable`` with ``Lambda``, ``IfExp``, and
+  assignment expression.
+
 
 What's New in Pylint 2.11.1?
 ============================
